# py-semantic-taxonomy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  compose.yaml  pyproject.toml
.github/workflows/: python-test.yml
docs/: index.html
docs-src/: common-workflows.md  development.md  index.md
docs/search/: search_index.json
examples/: PyST basic demo.ipynb
scripts/: __init__.py  export_openapi_spec.py  seed_cn.py  start_typesense_container.py
src/py_semantic_taxonomy/: app.py  cfg.py
src/py_semantic_taxonomy/adapters/persistence/: graph.py  tables.py
src/py_semantic_taxonomy/adapters/routers/: api_router.py  catch_router.py  request_dto.py  response_dto.py  web_router.py
src/py_semantic_taxonomy/adapters/routers/templates/: base.html  concept_scheme_view.html  concept_schemes.html  concept_view.html  search.html
src/py_semantic_taxonomy/application/: graph_service.py  search_service.py
src/py_semantic_taxonomy/domain/: constants.py  entities.py  ports.py
tests/fixtures/: cn.ttl  concept-scheme.jsonld
tests/integration/: test_concept_api.py  test_redirection_api.py  test_relationships_api.py  test_status_api.py  test_web_ui.py
tests/unit/application/: test_concept_services.py  test_relationship_services.py
tests/unit/domain/: test_association_entities.py  test_concept_entities.py  test_correspondence_entities.py  test_cs_entities.py  test_made_of_entities.py  test_search_entities.py
tests/unit/persistence/: test_graph_relationship.py
tests/unit/routers/: test_status.py
tests/unit/routers/concept_schemes/: test_cs_validation.py
tests/unit/routers/correspondence/: test_correspondence_validation.py
