[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_semantic_taxonomy"
authors = [
  { name="Chris Mutel", email="chris@cauldron.ch" }
]
maintainers = [
  { name="Chris Mutel", email="chris@cauldron.ch" }
]
description = "Python webapp and API for SKOS semantic taxonomies"
readme = "README.md"
dynamic = ["version"]
# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.12"
dependencies = [
    "asyncpg",
    "fastapi",
    "fastapi_pagination",
    "jinja2",
    "langcodes",
    "language-data",
    "orjson",
    "pydantic>=2",
    "pydantic_settings",
    "rdflib",
    "rfc3987",
    "sqlalchemy>=2.0",
    "structlog",
    # Fork of typesense client with async support
    "pyst_typesense_async",
    "uvicorn",
]

[project.urls]
source = "https://github.com/cauldron/py-semantic-taxonomy"
homepage = "https://github.com/cauldron/py-semantic-taxonomy"
tracker = "https://github.com/cauldron/py-semantic-taxonomy/issues"

[project.optional-dependencies]
testing = [
    "aiosqlite",
    "faker",
    "httpx",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-randomly",
    "pytest-antilru",
    "python-coveralls",
    "testcontainers[postgres]",
]
dev = [
    "build",
    "pre-commit",
    "aiosqlite",
    "httpx",
    "mkdocs",
    "mkdocs-material",
    "ruff",
    "pytest",
    "pytest-antilru",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-randomly",
    "setuptools",
    "testcontainers[postgres]",
]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["py_semantic_taxonomy*"]

[tool.setuptools.dynamic]
version = {attr = "py_semantic_taxonomy.__version__"}

[tool.pytest.ini_options]
addopts = "--cov py_semantic_taxonomy --cov-report term-missing --verbose -m \"not postgres and not typesense\""
norecursedirs = [
    "dist",
    "build",
    ".tox"
]
testpaths = ["tests/**/*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    # Mark tests with `@pytest.mark.postgres` (deselect with `pytest -m "postgres or not postgres"`)
    "postgres",
    "typesense"
]
lru_cache_disabled = '''
    py_semantic_taxonomy.dependencies
    py_semantic_taxonomy.cfg
    '''

[tool.ruff]
line-length = 100
extend-exclude = ["examples"]

[tool.ruff.lint]
# I: import sorting (replaces isort), F: pyflakes (unused imports/vars, etc.)
select = ["I", "F"]
